# gmcp

./: .dockerignore  .gitignore  :memory:  README.md  REFACTOR_SUMMARY.md  SECURITY.md  gofr-plot.env  pyproject.toml  test_no_auth.sh
.devcontainer/: devcontainer.json
app/: config.py  main.py  main_mcp.py  main_mcpo.py  main_web.py  mcp_responses.py  mcp_server.py  settings.py  web_server.py
app/auth/: __init__.py  middleware.py  service.py
app/graph_params/: params.py
docker/: Dockerfile.dev  Dockerfile.prod  build-base.sh  build-dev.sh  build-prod.sh  entrypoint-dev.sh  run-dev.sh  run-n8n.sh  run-openwebui.sh  run-prod.sh
docs/: AUTHENTICATION.md  AXIS_CONTROLS.md  CORS.md  DATA_PERSISTENCE.md  DEPENDENCY_INJECTION.md  DOCKER.md  ENHANCED_JWT.md  INDEX.md  MCPO.md  MCP_README.md  MULTI_DATASET.md  N8N_GUIDE.md  N8N_INTEGRATION.md  N8N_MCP_SETUP.md  N8N_TROUBLESHOOTING.md  PHASED_PLAN_STATUS.md  PING.md  PROXY_MODE.md  README_N8N_MCP.md  REFRACTOR_PLAN.md  SCRIPTS.md  SECURITY.md  STORAGE.md  TESTING.md  TEST_AUTH.md  VSCODE_LAUNCH_CONFIGURATIONS.md  WSL_NETWORK_ACCESS.md
examples/: axis_controls_example.py  mcp_axis_controls_example.py  multi_dataset_web_example.py
scripts/: check_coverage.sh  mcpo_wrapper.sh  render_manager.py  restart_servers.sh  run_all_servers.sh  run_mcp.sh  run_mcp_auth.sh  run_mcpo.sh  run_mcpo_auth.sh  run_tests.sh  run_tests_with_coverage.sh  run_web.sh  run_web_auth.sh  stop_all_servers.sh  storage_manager.py  token_manager.py
test/: conftest.py  test_registries.py  test_settings.py  test_storage_architecture.py
(+86 files in other folders)
